<?xml version="1.0"?>
<package format="2">
  <name>ekf</name>
  <version>0.0.1</version>
  <description>PX4 風格的 EKF 實現，基於 Extended Kalman Filter 原理</description>

  <maintainer email="benny@todo.todo">benny</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <!-- Exported build dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
</package>

